@@ -2,7 +2,8 @@ module CucumberFM
   module FeatureElement
     class ScenarioOutline < Struct.new(:feature, :raw)
 
-      PATTERN = /((^.*#+.*\n)+\n?)?(^.*@+.*\n)?^[ \t]*Scenario Outline:.*\n?(^.*\S+.*\n?)*\n?^[ \t]*Examples:.*\n(^.*\S+.*\n?)*/
+      # TODO requires more specs and some improvements
+      PATTERN = /((^.*#+.*\n)+\n?)?(^.*@+.*\n)?^[ \t]*Scenario Outline:.*\n?((^.*\S+.*\n?)*\n?)?(^[ \t]*Examples:.*\n(^.*\S+.*\n?)*)?/
 
       include CucumberFM::FeatureElement::Component::Tags
       include CucumberFM::FeatureElement::Component::Title
