@@ -1,5 +1,11 @@
+* fix - when aggregating data skip technical tags
+* fix - drawing navigation in editor for scenario outline
+* fix - problem with parsing scenario outline
+* fix - explicit conversion to string for match param ( ruby 1.9.2 issue )
+* fix - config.aggregate should by default array, instead of empty string
+* feature - orange highlighting scenario estimation if this scenario is in status @_todo
 * fix - status @_tested is treated also as done
-* feature - highlighting scenario estimation if this scenario isn't done
+* feature - red highlighting scenario estimation if this scenario isn't done
 * fix - sorting group by context in business overview
 * feature - grouping by role (@$_)
 * fix - feature delete
